updating reflinks and rebuilding readme with verb

--- a/.verb.md
+++ b/.verb.md
@@ -2,6 +2,8 @@
 
 > {%= description %}
 
+Defaults originally pulled from [helper-markdown][] and [helper-md][]
+
 {%= include("install-npm", {save: true}) %}
 
 ## Usage
@@ -32,3 +34,7 @@ var defaults = require('{%= name %}');
 ***
 
 {%= include("footer") %}
+
+[remarkable]: https://github.com/jonschlinkert/remarkable/
+[helper-markdown]: https://github.com/helpers/helper-markdown/
+[helper-md]: https://github.com/helpers/helper-md/
